prevents navbar and cards from overlapping

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,7 +7,7 @@ html, body {
 }
 
 body {
-  display: flex;
+  display: border;
   align-items: center;
   justify-content: center;
 }
