--- a/frontend/src/components/Navbar/styles.css
+++ b/frontend/src/components/Navbar/styles.css
@@ -6,7 +6,7 @@
 }
 
 html {
-  margin: 100%;
+  width: 100%;
   height: 100%;
 }
 
